[package]
name = "trk"
version = "0.1.0"
authors = ["rafael"]

edition = "2021"

[dependencies]
time = "0.3.5"
clap = "2.21.2"
serde = "1.0.130"
serde_derive = "1.0.130"
serde_json = "1.0.72"
chrono = { version = "0.4.19", features = ["serde", "rustc-serialize"] }
nom = "3.2.1"
url = "*"
url_open = "0.0.1"
