[package]
name = "trk"
version = "0.1.0"
authors = ["rafael"]

edition = "2021"

[dependencies]
time = "0.3.11"
clap = "3.2.12"
serde = { version = "1.0.139", features = ["derive"] }
serde_json = "1.0.82"
chrono = { version = "0.4.19", features = ["serde"] }
nom = "4.2.3"
url = "2.2.2"
url_open = "0.0.1"
