[package]
name = "trk"
version = "0.1.0"
authors = ["rafael"]

edition = "2021"

[dependencies]
time = "0.3.17"
clap = "3.2.23"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
chrono = { version = "0.4.23", features = ["serde"] }
nom = "4.2.3"
url = "2.3.1"
url_open = "0.0.1"
